--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddStudentActivity"/>
+        <activity android:name=".EditStudentActivity"/>
+        <activity android:name=".StudentDetailsActivity"/>
     </application>
 
 </manifest>
